--- a/shop/Templates/shop/checkout.html
+++ b/shop/Templates/shop/checkout.html
@@ -11,7 +11,7 @@
     </div>
     <div class="col my-4">
         <h2>Step 2 - Enter Address & Other Details:</h2>
-        <form method="post" action="/shop/checkout/">{% csrf_token %}
+        <form method="post" action="/checkout/">{% csrf_token %}
             <input type="hidden" name="itemsJson" id="itemsJson">
             <div class="form-row">
                 <div class="form-group col-md-6">
@@ -88,3 +88,4 @@ document.location = "/shop";
 {% endif %}
 </script>
 {% endblock %}
+
